# SRAi-example

./: .gitignore  README.md  TECHNICAL_DOCUMENT.md  pyproject.toml
.cursor/rules/: rag.mdc
app/: main.py
app/api/: __init__.py  deps.py
app/api/endpoints/: ai.py  auth.py  comments.py  posts.py  users.py
app/core/: config.py  security.py
app/db/: all_models.py  base.py  init_ai_data.py  init_db.py  session.py
app/models/: ai.py  comment.py  post.py  user.py
app/schemas/: __init__.py  comment.py  post.py  user.py
app/services/: __init__.py  ai.py  comment.py  post.py  user.py
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/ai/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/posts/: page.tsx
frontend/src/app/posts/[id]/: page.tsx
frontend/src/app/posts/[id]/edit/: page.tsx
frontend/src/app/posts/create/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: Navbar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
migrations/: env.py
migrations/versions/: 12c65146e166_ai_테이블_추가.py  230242d3ddb9_초기_마이그레이션.py  d8d77a99be41_ai_테이블_추가_수정.py
tests/: conftest.py
tests/test_api/: test_auth.py  test_posts.py
tests/test_services/: test_post_service.py
